# aruco-detection

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aruco-detection  aruco-detection.cpp  aruco-kalman.cpp  aruco-kalman.h  calibration640x480.yml  cleanme  cmake_install.cmake  image-capture  image-capture.cpp  runme
